@@ -15,6 +15,7 @@ Application Changes:
 - The program now properly prompts users about saving or discarding changes to their global settings if the only settings that were changed were the default character sheet and/or character sheet language.
 - Adding or removing improvements or improvement sources that modify the Essence cost of Geneware specifically now properly updates relevant Essence costs.
 - The character option to apply wound modifiers from encumbrance now shows properly in the character settings editing menu.
+- When selecting new cyberware or bioware to add that is forced to be at a specific grade (including None), said 'ware no longer still uses the availability and cost modifiers of the previously selected grade.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
